# config_example

./: Cargo.toml  README.md  flake.nix
config_example/: Cargo.toml
config_example/src/: generator.rs  lib.rs  node.rs  util.rs
config_example/src/node/: formatter.rs  types.rs
config_example/src/node/formatter/: toml.rs  yaml.rs
config_example/src/node/types/: comment.rs  number.rs
config_example_macros/: Cargo.toml
config_example_macros/src/: lib.rs
